Tue Apr 24 10:20:58 UTC 2007  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Fixed run-time linking error with GCC 3.2.2.

Tue Apr 24 09:10:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Enabled Dirent test again for VxWorks RTP

        * ace/Addr.cpp:
          Initialise members in the constructor directly instead of
          calling a seperate method

        * ace/Arg_Shifter.cpp:
          Fixed typo in comment

Mon Apr 23 15:05:31 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/SOCK_Dgram_Test.cpp: Added additional tests to verify data
          and peer addresses from recv(). Also fixed errors in use of %p.

Mon Apr 23 13:39:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Base.inl:
          Fixed copy/paste bug in swap_4 and swap_8

Mon Apr 23 13:09:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Task.cpp:
          Fixed compile error with msvc9 beta

Mon Apr 23 12:19:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc.h:
        * ace/config-win32-msvc-9.h:
          Initial files for msvc9. Microsoft released a public beta called
          Orcas

Fri Apr 20 18:20:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-7.h:
          msvc7 doesn't has intrin.h

Fri Apr 20 14:31:26 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/htbp.mpb:

          Added a 'requires' for ace_uuid.

        * examples/APG/Naming/naming.mpc:

          Added a 'requires' for ace_other (ACE naming services are within the
          ace_other MPC feature) to each project.

        * examples/Naming/Naming.mpc:

          Added a 'requires' for ace_other to each project.

        * performance-tests/Misc/Misc.mpc:

          Added a 'requires' for ace_other to the Misc_test_naming project.

        * bin/tao_orb_tests.lst:
