@@ -1,3 +1,9 @@
+Tue Apr 24 11:46:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Sock_Connect.cpp (get_ip_interfaces_aix):
+          Fixed resource leak. Thanks to Werner Buchert
+          <w dot buchert at medat dot de> for reporting this
+
 Tue Apr 24 10:20:58 UTC 2007  Olli Savia  <ops@iki.fi>
 
         * include/makeinclude/platform_lynxos.GNU:
